# worf

./: .clocignore  .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE.md  MANIFEST.in  Pipfile  README.md  permissions.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  setup.cfg  setup.py  testing.py  tests.py  validators.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: changelog-builder.json  ci.yml  next_version.py  package-updates.yml  pipenv-install.yml  pipenv-lock.yml  process_changelog.py  release-builder.yml  release_message.py
script/: build  check  cloc  console  lint  package  release  start  test
tests/: __init__.py  casing_tests.py  conftest.py  factories.py  models.py  permissions_tests.py  serializer_tests.py  serializers.py  test_actions.py  test_browsable_api.py  test_casing.py  test_conf.py  test_exceptions.py  test_permissions.py  test_schema_generator.py  test_serializers.py  test_shortcuts.py  test_utils.py  test_validators.py  test_views.py  urls.py  validators_tests.py  views.py  views_tests.py
tests/expected_data/: schema.json
worf/: __init__.py  assigns.py  casing.py  conf.py  decorators.py  exceptions.py  fields.py  filters.py  lookups.py  permissions.py  renderers.py  serializers.py  settings.py  shortcuts.py  testing.py  transformers.py  urls.py  utils.py  validators.py  views.py
worf/schema/: __init__.py  openapi.py  schema_generator.py
worf/templates/worf/: api.html  base.html
worf/testing/: __init__.py  legacy.py  serializers.py
worf/tests/: __init__.py  base.py  base_tests.py  casing.py  casing_tests.py  conftest.py  validators.py  validators_tests.py
worf/views/: __init__.py  action.py  api.py  base.py  create.py  delete.py  detail.py  errors.py  list.py  schema.py  update.py
