[tool.poetry]
name = "worf"
version = "0.5.23"
homepage = "https://github.com/gundotio/worf"
description = "Wade's own REST Framework: A more Djangonic approach to REST APIs"
authors = ["Wade Williams <wade@wadewilliams.com>", "Steve Lacey <steve@steve.ly>"]
keywords = ["django", "rest", "framework", "api"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
dj-url-filter = "^0.4.4"
django = ">=3.0.0,<4.2"
marshmallow = "^3.18"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
build = "^0.10.0"
twine = "^4.0.2"

[tool.poetry.group.lint.dependencies]
autoflake = "^2.0.1"
autopep8 = "^2.0.1"
black = "22.3.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.1.20"
flake8-docstrings = "^1.7.0"
flake8-pyproject = "^1.2.2"
flake8-quotes = "^3.3.2"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.1.0"
factory-boy = "^3.2.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "2.1.0"
pytest-watch = "^4.2.0"
pytest-xdist = "^3.1.0"
pytest = "^7.2.1"
pytest-kwparametrize = "^0.0.3"

[tool.black]
line-length = 88

[tool.flake8]
ignore = [
    "B001",
    "B006",
    "B028",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D202",
    "D205",
    "D212",
    "D213",
    "D400",
    "D401",
    "D404",
    "E203",
    "E501",
    "N818",
    "S101",
    "S105",
    "S106",
    "S107",
    "S110",
    "S311",
    "W503",
]
inline-quotes = "double"
per-file-ignores = [
    "__init__.py:F403",
]
max-complexity = 12

[tool.isort]
combine_as_imports = true
known_django = "django"
known_firstparty = "worf"
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
